<resources>
    <string name="app_name">Pack My Load</string>
    <string name="title_activity_phone_number">PhoneNumberActivity</string>
    <string name="phone_numb">Phone Number</string>
    <string name="phone_number_guide">We need your phone number so we can give you updates on your moves. Kindly enter number with your country code</string>
    <string name="phone_menu_next">NEXT</string>
    <string name="verify_code">Verify Code</string>
    <string name="code_hint">Code</string>
    <string name="verify_guide">You\'re receiving a text on the number you just entered with a verification code</string>
    <string name="booking_text">I want to book a</string>
    <string name="name_of_service">Service name</string>
    <string name="name_of_icon">Icon name</string>
    <string name="no_history">No PML plan</string>
    <string name="history_title">History</string>
    <string name="profile_title">Profile</string>
    <string name="profile_save_menu">SAVE</string>
    <string name="payment_title">Payment</string>
    <string name="payment_edit_menu">EDIT</string>
    <string name="add_card_title">Add Card</string>
    <string name="invite_friends_title">Invite Friends</string>\
    <string name="about_title">About</string>
    <string name="set_pickup_title">Set Pickup</string>
    <string name="enter_card_details">Please enter your card details below</string>
    <string name="twitter_title">Twitter</string>
    <string name="instagram_title">Instagram</string>
    <string name="facebook_title">Facebook</string>
    <string name="FAQ">FAQ</string>
    <string name="terms">Terms of Use</string>
    <string name="pml_motto">Instant Moving and Delivery</string>
    <string name="fb_button">Login with Facebook</string>
    <string name="phn_button">Use Phone Number Instead</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_activity_name">Set Pickup</string>
    <string name="pickup_location_text">Pickup Location</string>
    <string name="dest_text">Destination</string>
    <string name="enter_location_text">Enter Location</string>
    <string name="sample_location_text">Iju-Ishaga, Lagos</string>
    <string name="enter_destination_text">Enter Destination</string>
    <string name="continue_button_text">Continue</string>
    <string name="location_hint">Search for destination</string>
    <string name="select_size_activity_name">Select your Size</string>
    <string name="size_explanation">Perfect for moving your sofa, some boxes or just a few items</string>
    <string name="price_range">N32 + N1.4 per min</string>
    <string name="estimate_price">Estimate your price</string>
    <string name="select_pickup_time">Select Pickup Time</string>
    <string name="pickup_window_text">Select a pickup window</string>
    <string name="about_item">Tell us what you are moving or share special instructions with your PML Loader</string>
    <string name="items_moving_activity">What are You Moving?</string>
    <string name="add_photo_description">Add photo or description</string>
    <string name="add_photo">Add Photo</string>
    <string name="arrival_text">Arrival to Pick up between 8:00 AM - 9:00 AM</string>
    <string name="destination">Destination</string>
    <string name="destination_text">Maryland Mall, Lagos</string>
    <string name="add_payment">Add payment</string>
    <string name="promo_code_text">Enter promo code here</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="date_pickup_title_example">Wednesday, February 14</string>
    <string name="choose_time_text">Select Time</string>
    <string name="choose_date_text">Select Date</string>
    <string name="time_example">8:00 AM - 9:00 AM</string>
    <string name="time_1">8:00 AM - 9:00 AM</string>
    <string name="time_2">9:00 AM - 10:00 AM</string>
    <string name="time_3">10:00 AM - 11:00 AM</string>
    <string name="time_4">11:00 AM - 12:00 PM</string>
    <string name="time_5">12:00 PM - 1:00 PM</string>
    <string name="time_6">1:00 PM - 2:00 PM</string>
    <string name="time_7">2:00 PM - 3:00 PM</string>
    <string name="time_8">3:00 PM - 4:00 PM</string>
    <string name="time_9">4:00 PM - 4:00 PM</string>
    <string name="time_10">5:00 PM - 6:00 PM</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="verify_number">Verify Number</string>
    
    <string name="facebook_app_id">305387516651498</string>
    <string name="fb_login_protocol_scheme">fb305387516651498</string>

    <string name="google_places_api_key">AIzaSyAbH_VtMcV-zkNfsjpoIA2uPqR2pkJEIaE</string>
    <string name="Saving_data_dialog_text">Saving data please wait...</string>

    <string name="default_history_pml_type_text">Food Delivery</string>
    <string name="default_pml_date">20th Sept, 1996</string>

</resources>
