<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.chokus.konye.packmyload.PickupDateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGreyText"
        android:text="@string/arrival_text"
        android:id="@+id/arrival_textView"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_relative_layout"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/arrow_up_icon"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/arrow_down_icon"
            android:layout_below="@+id/arrow_up_icon"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/pickup_linear_layout"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/arrow_up_icon">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreyText"
                android:text="@string/pickup_location_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_location_text"
                android:textSize="18sp"/>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
