<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.chokus.konye.packmyload.ItemsMovingActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@drawable/curved_edit_text_view"
        android:id="@+id/about_item_editText"
        android:hint="@string/about_item"
        android:textColorHint="@color/colorGreyText"
        android:gravity="start"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.3dp"
        android:background="#000000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/about_item_editText"
        android:layout_marginTop="-7.5dp"/>

    <!--add grid view for the item photos to be taken and added-->

    <ImageView
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/about_item_editText"
        android:layout_marginTop="50dp"
        android:id="@+id/camera_icon"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_photo"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/camera_icon"
        android:layout_marginTop="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/continue_layout"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="14dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_description"
            android:textSize="19sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

</RelativeLayout>
