<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.chokus.konye.packmyload.activity.SelectYourSizeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:id="@+id/enlarged_imgView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/enlarged_imgView"
        android:textColor="@color/colorGreyText"
        android:text="@string/size_explanation"
        android:textAlignment="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:id="@+id/size_explanation_textView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/size_selection_layout"
        android:layout_below="@+id/size_explanation_textView"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/first_image_size"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/second_image_size"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/third_image_size"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/size_selection_layout"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/price_range_textView"
        android:text="@string/price_range"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/price_range_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/info_solid_circular_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/estimate_price"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/continue_layout"
        android:background="@color/colorAccent"
        android:paddingTop="14dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button_text"
            android:textSize="19sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"/>

    </RelativeLayout>

</RelativeLayout>
