<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.chokus.konye.packmyload.GetStartedActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/logo_imgView"
        android:src="@drawable/pml_splash_logo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pml_motto"
        android:layout_below="@+id/logo_imgView"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_marginTop="200dp"
        android:background="@color/colorPrimary">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/fb_button"
            android:textAllCaps="false"
            android:id="@+id/login_with_fb_button"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="40dp"
            android:background="@drawable/curved_white_button"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phn_button"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/use_phone_number_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_below="@id/login_with_fb_button"
            android:background="@drawable/curved_white_button"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/textView"
        android:src="@drawable/pml_get_started"
        android:layout_marginTop="115dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

</RelativeLayout>
